# local-coding-agent

./: README.md  pyproject.toml
app/agents/: registry.py
app/api/: main.py
app/api/routes/: runs.py
app/core/: config.py
app/models/: agent.py  run.py  tool_call.py
app/providers/: base.py  ollama_provider.py
app/sandbox/: subprocess_runner.py
app/services/: run_service.py
app/storage/: db.py
app/storage/repositories/: run_repository.py
app/tools/: file_tools.py  validation.py
app/workflows/: coding_graph.py
tests/: test_run_repository.py  test_run_service_actions.py  test_sandbox.py  test_validation.py  test_workflow.py
